2002-07-22  Andreas Jaeger  <aj@suse.de>

	* sysdeps/x86_64/dl-machine.h (elf_machine_load_address): Use
	local label.

2002-07-21  Roland McGrath  <roland@frob.com>

	* wcsmbs/Makefile (strtox-CFLAGS): New variable,
	put -I../include before -I../stdlib so we get the right errno.h et al.
	(CFLAGS-wcstod.c): Use that variable instead of -I../stdlib.
	(CFLAGS-wcstof.c): Likewise.
	(CFLAGS-wcstold.c): Likewise.
	(CFLAGS-wcstod_l.c): Likewise.
	(CFLAGS-wcstof_l.c): Likewise.
	(CFLAGS-wcstold_l.c): Likewise.

2002-07-19  Roland McGrath  <roland@frob.com>

	* sysdeps/mach/hurd/errnos.awk: Remove __set_errno defn from output.

2002-07-20  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/ldsodefs.h (HAVE_AUX_XID): Define if
	__ASSUME_AT_XID is defined.
	* sysdeps/unix/sysv/linux/kernel-features.h (__ASSUME_AT_XID): Define
	for 2.4.1 and up.
	* sysdeps/generic/dl-sysdep.c (_dl_sysdep_start): Optimize handling
	of AT_UID, AT_EUID, AT_GID, and AT_EGID.

	* wcsmbs/Makefile (CFLAGS-wcstod.c): Add -I../stdlib.
	(CFLAGS-wcstof.c): Likewise.
	(CFLAGS-wcstold.c): Likewise.
	(CFLAGS-wcstod_l.c): Likewise.
	(CFLAGS-wcstof_l.c): Likewise.
	(CFLAGS-wcstold_l.c): Likewise.

2002-07-18  Jakub Jelinek  <jakub@redhat.com>

	* resource/sys/resource.h (__rlimit_resource_t, __rusage_who_t,
	__priority_which_t): Always typedef to int for C++.

2002-07-19  Ulrich Drepper  <drepper@redhat.com>

	* configure.in: Add test for __thread support in compiler.
	* config.h.in: Add HAVE___THREAD.
	* Makefile (headers): Remove errno.h, sys/errno.h, and bits/errno.h.
	* include/sys/errno.h: Moved to...
	* stdlib/sys/errno.h: ...here.  New file.
	* stdlib/errno.h: New file.  Moved from...
	* include/errno.h: ...here.  Changed into an internal header defining
	libc-local things like __set_errno.
	* stdlib/Makefile (headers): Add errno.h, sys/errno.h, and
	bits/errno.h.
	* elf/dl-minimal.c: Include <tls.h>.  Define errno as thread-local